# Harmoniz.AI

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  STREAMLIT_DEPLOYMENT.md  app.py  docker-compose.yml  examples_api.py  initialize.py  pyproject.toml  quickstart.py  requirements-pinned.txt  requirements.txt  run_api.py  setup_db.py  setup_project.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.example
Docs/: 475663855-vinhos-da-wine.xlsx
src/: __init__.py
src/api/: __init__.py  main.py
src/engine/: __init__.py  debug_deploy.py  harmoniz_ai.py  ingest.py  multi_llm_judge.py  sommelier_agent.py
src/utils/: __init__.py  observability_setup.py
