[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmoniz-ai"
version = "1.0.0"
description = "Plataforma de IA Generativa para Curadoria de Vinhos"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "vdfs89", email = "contact@harmoniz.ai"}
]
keywords = ["wine", "rag", "langchain", "streamlit", "multi-llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-community",
    "langsmith",
    "chromadb",
    "streamlit>=1.30.0",
    "pandas",
    "openpyxl",
    "python-dotenv",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/vdfs89/Harmoniz.AI"
"Bug Tracker" = "https://github.com/vdfs89/Harmoniz.AI/issues"
"Documentation" = "https://github.com/vdfs89/Harmoniz.AI#readme"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["**/*.py"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
